syntax = "proto3";

package orders;

option go_package = "lab10/proto";

// OrderStatus represents the current state of an order.
enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  SHIPPED = 2;
  DELIVERED = 3;
  CANCELLED = 4;
}

// LineItem represents a single product in an order.
message LineItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
}

// Order represents a customer order.
message Order {
  string id = 1;
  string customer_id = 2;
  repeated LineItem items = 3;
  OrderStatus status = 4;
  double total_amount = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// CreateOrderRequest contains data for creating a new order.
message CreateOrderRequest {
  string id = 1;
  string customer_id = 2;
  repeated LineItem items = 3;
}

// CreateOrderResponse returns the created order.
message CreateOrderResponse {
  Order order = 1;
}

// GetOrderRequest contains the order ID to retrieve.
message GetOrderRequest {
  string id = 1;
}

// GetOrderResponse returns the requested order.
message GetOrderResponse {
  Order order = 1;
}

// ListOrdersRequest is empty - retrieves all orders.
message ListOrdersRequest {}

// ListOrdersResponse returns all orders.
message ListOrdersResponse {
  repeated Order orders = 1;
}

// UpdateOrderStatusRequest contains order ID and new status.
message UpdateOrderStatusRequest {
  string id = 1;
  OrderStatus status = 2;
}

// UpdateOrderStatusResponse is empty - indicates success.
message UpdateOrderStatusResponse {}

// DeleteOrderRequest contains the order ID to delete.
message DeleteOrderRequest {
  string id = 1;
}

// DeleteOrderResponse is empty - indicates success.
message DeleteOrderResponse {}

// OrderService defines the gRPC service for order management.
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
